<resources>
    <string name="app_name">V5答题助手</string>
    <string name="app_name_version">V5答题助手(v1.1)</string>
    <string name="action_about">关于</string>
    <string name="action_share">分享</string>
    <string name="about_home">应用官网</string>
    <string name="about_me">开发者</string>
    <string name="about_version">版本</string>
    <string name="about_tips">注：本应用采用较为高级的辅助模式和浮动窗口功能实现答题辅助，需要使用者授权，本应用不做任何非法盈利目的，特此声明，如有侵权请联系告知。</string>
    <string name="v5_version_info"><Data><![CDATA[ v%s ]]></Data></string>
    <string name="v5_copyright"><Data><![CDATA[ Copyright © 2017-2018 CHYRAIN \n All Rights Reserved.]]></Data></string>
    <string name="share_title">小窗口实时获取答案，全自动托管自动作答，答题赢钱so easy，来不及解释了，快上车！</string>
    <string name="share_content_fmt">小窗口同步显示答案，全自动托管自动作答，答题赢现金游戏自动解题助手，又快又准！轻松答对12题，冲顶快人一步！——来自[%s]</string>
    <string name="app_intro">使用说明</string>

    <string name="main_name">答题辅助</string>
    <string name="accessibility_description">启动直播答题辅助服务，帮您找到答案并自动作答，【必须开启】，否则无法自动答题。\n目前支持《芝士超人》《冲顶大会》《映客直播》《西瓜视频》《花椒直播》《黄金十秒》等App的直播答题。\n注：答案来自AI机器人，不确保答案正确性，从历史数据来看平均正确率约为85%。</string>
    <string name="service_name">V5答题助手（直播答题赢奖金）</string>
    <string name="open_service_title">需要开启辅助服务才能正常使用</string>
    <string name="open_service_button">打开辅助服务</string>
    <string name="open_float_service">设置悬浮窗权限</string>
    <string name="open_notify_service">打开通知栏服务</string>
    <string name="check_update">检查更新</string>
    <string name="share">分享</string>
    <string name="tips">找到【V5答题助手】，然后开启服务即可</string>
    <string name="meizu_tips">进入“无障碍” -> 找到【V5答题助手】并开启服务</string>
    <string name="qq_settings">QQ设置</string>
    <string name="notify_settings">答题提醒设置</string>
    <string name="trust_mode_0">答不上时通知提醒</string>
    <string name="trust_mode_1">答不上时随机选一个答案</string>

    <string name="follow_preference_title">关注V5KF微信</string>
    <string name="follow_preference_summary">了解最新的智能客服机器人资讯动态</string>
    <string name="donate_title">赞赏开发者</string>
    <string name="donate_summary">如果这个工具能帮到你，可以给开发者一点赞赏</string>

    <string name="agreement_title">免责声明</string>
    <string name="agreement_message">本软件仅供学习使用，全自动托管模式答题时会进行一些自动化操作（需要开启辅助功能和悬浮窗显示），答案来自AI机器人，准确率并非100%%，不涉及任何第三方软件接口，本软件无病毒、不收集用户隐私信息，禁止使用本软件参与任何非法活动。一切因使用“%1$s”造成的任何后果，“%1$s”概不负责，亦不承担任何法律责任!</string>

    <string name="overlay_permission_title">悬浮窗权限未获取</string>
    <string name="overlay_permission_message">请到“应用管理” -> “%1$s” -> “权限管理” ->  中允许显示“悬浮窗”(不同手机品牌设置有所区别)</string>
    <string name="overlay_ad_tips">关闭广告需联系客服</string>
    <string name="overlay_unpoints_message">您的积分不足，做积分任务达到200积分即可永久使用此功能。或者进入【联系客服】发送“解锁全自动托管”。</string>

    <string name="dialog_title">提醒</string>
    <string name="qr_wx_id">v5zhike</string>
    <string name="qr_tips">点击复制微信号:v5zhike</string>

    <string name="copy_token_tips">已复制机器码到剪贴板</string>
    <string name="me">Chyrain</string>
    <string name="open_with_browser">浏览器打开</string>
    <string name="about_title">关于V5答题助手</string>
    <string name="about_update">检查更新</string>
    <string name="about_token">机器码</string>
    <string name="about_url">https://chyrain.github.io/app/quizassistant</string>

    <string name="float_unable_tip">请开启机器人开关</string>

    <string name="on_check_update_fail">检查更新失败，请检查网络</string>
    <string name="on_update_enable">有新版本可用，建议您下载！</string>
    <string name="on_download_finish">新版本下载完成，现在安装？</string>
    <string name="on_download_description">正在下载&#8230;</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="app_version_name">当前版本</string>
    <string name="can_not_find_version_name">未获取到当前版本</string>
    <string name="already_new">已是最新版本</string>
    <string name="update_failed">更新失败，请重试</string>
    <string name="has_new">有新版本(%s)</string>
    <string name="ignore">忽略该版</string>

</resources>
