<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.v5kf.v5wxbot.MainActivity" >

    <item
        android:id="@+id/action_service"
        android:orderInCategory="96"
        app:showAsAction="never"
        android:title="@string/open_service_button"/>
    <!--<item-->
        <!--android:id="@+id/action_float"-->
        <!--android:orderInCategory="97"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/open_float_service"/>-->
    <item
        android:id="@+id/action_notify"
        android:orderInCategory="98"
        app:showAsAction="never"
        android:title="@string/open_notify_service"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="99"
        app:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/action_share"/>

</menu>
