<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="#F8F8F8" >
	
		<ScrollView
	   	    android:layout_width="match_parent"
	   	    android:layout_height="match_parent"
		    android:layout_above="@+id/id_copyright" >
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_horizontal"
			    android:gravity="center_horizontal"
		        android:orientation="vertical" >
			
				<ImageView
				    android:id="@+id/id_icon"
				    android:layout_width="80dp"
				    android:layout_height="80dp"
				    android:layout_marginTop="30dp"
				    android:src="@mipmap/ic_launcher" />
				
		    	<TextView
					android:id="@+id/id_app_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
					android:gravity="center_horizontal"
					android:padding="2dp"
					android:layout_marginBottom="20dp"
					android:textColor="#9fa0a0"
					android:textSize="14sp"
					android:text="@string/app_name_version" />
				
		    	<View
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/base_line_width_s"
			        android:background="@color/info_activity_item_divider_inner" />

				<RelativeLayout
					android:id="@+id/layout_update"
					android:layout_width="match_parent"
					android:layout_height="@dimen/info_item_height_single"
					android:visibility="gone"
					android:background="@drawable/info_item_selector" >

					<TextView
						style="@style/InfoItemText_L"
						android:layout_marginStart="@dimen/info_item_margin_h"
						android:layout_marginLeft="@dimen/info_item_margin_h"
						android:layout_alignParentStart="true"
						android:layout_alignParentLeft="true"
						android:layout_centerVertical="true"
						android:text="@string/about_update" />

					<TextView
						android:id="@+id/id_update_tv"
						style="@style/InfoItemText_R"
						android:visibility="visible"
						android:layout_alignParentRight="true"
						android:layout_alignParentEnd="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="@dimen/info_item_margin_h"
						android:layout_marginEnd="@dimen/info_item_margin_h" />

				</RelativeLayout>

		    	<RelativeLayout
			        android:id="@+id/layout_home"
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/info_item_height_single"
			        android:background="@drawable/info_item_selector" >
				    
			        <TextView
			            style="@style/InfoItemText_L"
			            android:layout_marginStart="@dimen/info_item_margin_h"
			            android:layout_marginLeft="@dimen/info_item_margin_h"
			            android:layout_alignParentStart="true"
			            android:layout_alignParentLeft="true"
			            android:layout_centerVertical="true"
			            android:text="@string/about_home" />
			
			        <TextView
			            android:id="@+id/id_home_tv"
			            style="@style/InfoItemText_R"
			            android:visibility="visible"
			            android:layout_alignParentRight="true"
			            android:layout_alignParentEnd="true"
			            android:layout_centerVertical="true"
			            android:layout_marginRight="@dimen/info_item_margin_h"
			            android:layout_marginEnd="@dimen/info_item_margin_h"
			            android:drawablePadding="@dimen/info_item_padding_inner"
			            android:drawableEnd="@mipmap/register_bottom_arrow"
			            android:drawableRight="@mipmap/register_bottom_arrow" />
		
			    </RelativeLayout>

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/base_line_width_s"
					android:background="@color/info_activity_item_divider_inner" />

				<RelativeLayout
					android:id="@+id/layout_me"
					android:layout_width="match_parent"
					android:layout_height="@dimen/info_item_height_single"
					android:background="@drawable/info_item_selector" >

					<TextView
						style="@style/InfoItemText_L"
						android:layout_marginStart="@dimen/info_item_margin_h"
						android:layout_marginLeft="@dimen/info_item_margin_h"
						android:layout_alignParentStart="true"
						android:layout_alignParentLeft="true"
						android:layout_centerVertical="true"
						android:text="@string/about_me" />

					<TextView
						android:id="@+id/id_me_tv"
						style="@style/InfoItemText_R"
						android:visibility="visible"
						android:layout_alignParentRight="true"
						android:layout_alignParentEnd="true"
						android:layout_centerVertical="true"
						android:layout_marginRight="@dimen/info_item_margin_h"
						android:layout_marginEnd="@dimen/info_item_margin_h"
						android:drawablePadding="@dimen/info_item_padding_inner"
						android:drawableEnd="@mipmap/register_bottom_arrow"
						android:drawableRight="@mipmap/register_bottom_arrow" />

				</RelativeLayout>
	
			    <RelativeLayout
			        android:id="@+id/layout_version"
			        android:layout_width="match_parent"
			        android:layout_height="@dimen/info_item_height_single"
			        android:background="@drawable/info_item_selector" >			
			        
			        <View
			            android:id="@+id/divider_version"
			            android:layout_marginLeft="@dimen/info_item_margin_h"
			            android:layout_marginStart="@dimen/info_item_margin_h"
				        android:layout_width="match_parent"
				        android:layout_height="@dimen/base_line_width_s"
				        android:background="@color/info_activity_item_divider_inner" />
				    
			        <TextView
			            style="@style/InfoItemText_L"
			            android:layout_marginStart="@dimen/info_item_margin_h"
			            android:layout_marginLeft="@dimen/info_item_margin_h"
			            android:layout_alignParentStart="true"
			            android:layout_alignParentLeft="true"
			            android:layout_centerVertical="true"
			            android:text="@string/about_version" />
			
			        <TextView
			            android:id="@+id/id_version_tv"
			            style="@style/InfoItemText_R"
			            android:visibility="visible"
			            android:layout_alignParentRight="true"
			            android:layout_alignParentEnd="true"
			            android:layout_centerVertical="true"
			            android:layout_marginRight="@dimen/info_item_margin_h"
			            android:layout_marginEnd="@dimen/info_item_margin_h" />
		
			    </RelativeLayout>
			    
			    <TextView
			        android:text="@string/about_tips"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:padding="12dp"
			        android:textSize="12sp"
			        android:textColor="@color/dark_gray" />
			</LinearLayout>
	    </ScrollView>
		
		<TextView
	        android:id="@+id/id_copyright"
	        android:layout_centerHorizontal="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_marginTop="8dp"
	        android:layout_marginBottom="12dp"
	        android:gravity="center_horizontal"
	        android:textColor="#9fa0a0"
	        android:text="@string/v5_copyright" />
		
	</RelativeLayout>
</LinearLayout>