<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="开启V5答题助手">

        <Preference
            android:title="@string/app_intro"
            android:summary="必读"
            android:key="KEY_INSTRUCTION"/>

        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:title="答题助手浮动窗口"
            android:summary="开启桌面悬浮窗，显示推荐答案与快捷开关，窗口左侧图标为【全自动托管】快捷开关"
            android:defaultValue="true"
            android:key="KEY_ENABLE_FLOAT_BUTTON"/>

        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:defaultValue="true"
            android:title="机器人开关"
            android:summary="开启机器人开关以获取推荐答案，同一时间只支持一个答题平台，需打开对应平台直播页面"
            android:key="KEY_ENABLE_WECHAT"/>

        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:defaultValue="true"
            android:title="芝士超人"
            android:summary="开启【芝士超人】直播答题助手"
            android:icon="@mipmap/settings_ic_zscr"
            android:key="KEY_ENABLE_ZSCR"/>
        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:defaultValue="true"
            android:title="冲顶大会"
            android:summary="开启【冲顶大会】直播答题助手"
            android:icon="@mipmap/settings_ic_cddh"
            android:key="KEY_ENABLE_CDDH"/>
        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:defaultValue="true"
            android:title="西瓜视频"
            android:summary="开启西瓜视频【百万英雄】直播答题助手"
            android:icon="@mipmap/settings_ic_xigua"
            android:key="KEY_ENABLE_XIGUA"/>
        <!--<com.chyrain.quizassistant.view.CustomSwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:title="映客直播"-->
            <!--android:summary="开启映客直播【芝士超人】直播答题助手"-->
            <!--android:icon="@mipmap/settings_ic_inke"-->
            <!--android:key="KEY_ENABLE_INKE"/>-->
        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:defaultValue="true"
            android:title="花椒直播"
            android:summary="开启花椒直播【百万赢家】直播答题助手"
            android:icon="@mipmap/settings_ic_huajiao"
            android:key="KEY_ENABLE_HUAJIAO"/>
        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:defaultValue="true"
            android:title="黄金十秒"
            android:summary="开启【黄金十秒】直播答题助手"
            android:icon="@mipmap/settings_ic_hjsm"
            android:key="KEY_ENABLE_HJSM"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="答题设置"
        android:summary="建议全部开启，至少开启一项">

        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:defaultValue="false"
            android:title="全自动托管"
            android:summary="开启此选项机器人可自动为您答题，无需盯着屏幕(暂不支持西瓜视频)，建议同时开启【监听通知栏】，到点提醒并自动答题"
            android:key="KEY_AUTO_TRUST"/>

        <com.chyrain.quizassistant.view.CustomSwitchPreference
            android:title="监听通知栏"
            android:summary="开启通知获取权限，直播开始前会收到对应App的通知，开启通知监听可自动打开App答题"
            android:defaultValue="true"
            android:key="KEY_NOTIFICATION_SERVICE_TEMP_ENABLE"/>

        <!--<com.chyrain.quizassistant.view.CustomSwitchPreference-->
            <!--android:defaultValue="true"-->
            <!--android:title="机器人提示答案"-->
            <!--android:summary="答案显示在可拖动的浮动条上"-->
            <!--android:key="KEY_SHOW_ANSWER"/>-->

    </PreferenceCategory>

    <PreferenceCategory android:title="其他设置">

        <Preference
            android:title="更多设置"
            android:key="NOTIFY_SETTINGS"/>

        <Preference
            android:title="积分任务"
            android:summary="做任务赚取积分，达到200积分即可开启【全自动托管】权限，或者进入【联系客服】发送“解锁全自动托管”。"
            android:key="MORE_APPS" />

    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="关于">

        <Preference
            android:title="@string/action_share"
            android:summary="好用就分享给你的小伙伴吧！"
            android:key="KEY_SHARE"/>

        <Preference
            android:title="@string/donate_title"
            android:summary="@string/donate_summary"
            android:key="KEY_DONATE_ME"/>
        
        <Preference
            android:title="联系客服"
            android:summary="联系在线客服提交您的反馈"
            android:key="KEY_KEFU"/>

        <Preference
            android:title="关于"
            android:key="KEY_ABOUT"/>

    </PreferenceCategory>
</PreferenceScreen>